--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velozes e Furiosos</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/Logo sem fundo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -44,13 +45,12 @@
     </header>
 
     <div id="div-button">
-        <button ,0
-        4>TROCAR IMAGEM</button>
+        <button onclick="changeImage (), trocarImagem (), trocarImagem3 ()" id="myBtn">TROCAR IMAGEM</button>
     </div>
     <div id="div-pai">
 
         <div id="b1" class="blocos efeito-img-topo">
-            <img src="imagens/Dom.JPEG" alt="" id="primeiraImagem">
+            <img src="imagens/Dom.JPEG" alt="Dominic Toretto" id="primeiraImagem">
         </div>
         <div id="b2" class="blocos efeito-img-topo">
             <img src="imagens/Mia.jpeg" alt="" id="segundaImagem">
